# quickbridge

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md
.cargo/: config.toml
.github/workflows/: ci.yml  release.yml
src/: app.rs  cli.rs  diagnostics.rs  ffmpeg.rs  main.rs  player.rs  probe.rs  prompt.rs  server.rs  session.rs  simulate.rs  source.rs  terminal.rs  timecode.rs
tests/: cli.rs
