[package]
name = "quickbridge"
version = "0.1.0"
edition = "2024"
rust-version = "1.94"
description = "A macOS-first QuickTime relay CLI built on ffmpeg"
license = "MIT"
readme = "README.md"
repository = "https://github.com/DG02002/quickbridge"
homepage = "https://github.com/DG02002/quickbridge"
documentation = "https://docs.rs/quickbridge"
keywords = ["cli", "ffmpeg", "quicktime", "hls", "video"]
categories = ["command-line-utilities", "multimedia::video"]

[dependencies]
anyhow = "1.0.100"
axum = "0.8.6"
clap = { version = "4.5.48", features = ["derive", "wrap_help"] }
crossterm = { version = "0.29.0", features = ["event-stream"] }
dialoguer = "0.12.0"
futures-util = "0.3.31"
reqwest = { version = "0.12.24", default-features = false, features = ["rustls-tls", "http2"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tokio = { version = "1.48.0", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter", "fmt"] }

[dev-dependencies]
assert_cmd = "2.0.17"
predicates = "3.1.3"
tempfile = "3.23.0"
